fixed the upper part getting cut-off on mobile issue

--- a/style.css
+++ b/style.css
@@ -2,5 +2,10 @@
     .news-input{
         width:50%;
     }
-    
 }
+
+body::before {
+    display: block;
+    content: '';
+    height: 60px;
+  }
